--- a/LabDownloadImage/Views/Home/Index.cshtml
+++ b/LabDownloadImage/Views/Home/Index.cshtml
@@ -6,7 +6,11 @@
 <div class="text-center">
     <h1 class="display-4">Gallery</h1>
     <form method="POST" asp-action="Add" enctype="multipart/form-data">
-        <input type="file" name="imgName" asp-for="fileName"/>
+        <input type="file" name="fileName" asp-for="fileName" />
         <input type="submit" value="Download to cloud storage">
     </form>
+
+
+
+
 </div>
